--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-switch": "^1.0.3",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-input-mask": "^3.0.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
@@ -20,7 +22,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "tailwindcss": "3.3.2",
+    "ts-input-mask": "^2.2.0",
     "typescript": "5.1.6"
   }
 }
