--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-switch": "^1.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@types/react-input-mask": "^3.0.2",
+    "@types/react-redux": "^7.1.25",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-redux": "^8.1.1",
     "tailwindcss": "3.3.2",
     "ts-input-mask": "^2.2.0",
     "typescript": "5.1.6"
